# assembly_control_ros

./: .clang-format  CMakeLists.txt  README.md  package.xml
include/common/: machine_controller.hpp
include/vrep/: simulator.h
include/vrep/machines/: assembly_station.h  camera.h  evacuation_conveyor.h  machine.hpp  machines.h  robot.h  supply_conveyor.h
include/vrep_remote_api/: extApi.h  extApiPlatform.h
launch/: assembly.launch
msg/: assembly_station_output.msg  assembly_station_state.msg  camera_command.msg  camera_input.msg  camera_output.msg  camera_state.msg  evacuation_conveyor_input.msg  robot_command.msg  robot_input.msg  robot_output.msg  robot_state.msg  supply_conveyor_command.msg  supply_conveyor_input.msg  supply_conveyor_output.msg  supply_conveyor_state.msg
share/petri_nets/with_io/: All.ndr  AssemblyStation.ndr  EvacuationConveyor.ndr  Robot.ndr  SupplyConveyor.ndr  camera.ndr
share/petri_nets/without_io/: AssemblyStation.ndr  EvacuationConveyor.ndr  Robot.ndr  SupplyConveyor.ndr  camera.ndr
share/vrep/: assembly_cell.ttt
src/: CMakeLists.txt
src/assembly_station/: main.cpp
src/camera/: main.cpp
src/controller/: main.cpp
src/evacuation_conveyor/: main.cpp
src/robot/: main.cpp
src/supply_conveyor/: main.cpp
src/vrep/: main.cpp  simulator.cpp
src/vrep_remote_api/: extApi.c  extApiCustom.c  extApiCustom.h  extApiInternal.h  extApiPlatform.c
